<resources>
    <string name="app_name">icetea</string>

    <!-- From main branch -->
    <string name="total_number_of_participant_to_be_admitted">Total Number of participant to be admitted:</string>
    <string name="event_details">EVENT DETAILS</string>
    <string name="loading">Loading...</string>
    <string name="participants_in_waitlist">Participants in waitlist:</string>
    <string name="lottery_selection_process">Lottery Selection Process</string>
    <string name="loading_lottery_details">Loading lottery details...</string>
    <string name="join_waitlist">JOIN WAITLIST</string>

    <!-- From your stashed changes -->
    <string name="opt_phone">[OPT] Phone</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="save_info">Save Info</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="qr_scanner_icon">QR Scanner Icon</string>
    <string name="scan_event_qr_code">Scan Event QR Code</string>
    <string name="scan_qr_description">Point your camera at an event QR code to join the waitlist</string>
    <string name="scan_qr_code">SCAN QR CODE</string>
    <string name="scan_cancelled">Scan Cancelled</string>
    <string name="invalid_qr_code">Invalid QR Code</string>
    <string name="scanning_event">Scanning Event...</string>

    <string name="notification_event_name">Event Name</string>
    <string name="notification_message">Notification message</string>
    <string name="notification_timestamp">Timestamp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>